--- a/join_data.ipynb
+++ b/join_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,17 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "short = pd.read_csv(\"data/archive/final_cleaned.csv\")\n",
-    "long = pd.read_csv(\"data/data【暂不考虑】/cleaned_data.csv\")"
+    "long = pd.read_csv(\"data/data/cleaned_data.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
        "4                               John Carter   284139100  260000000"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,30 +162,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new[\"justified_revenue\"] = new[\"revenue\"].div(1000000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Series_Title     0\n",
-       "Released_Year    0\n",
-       "Runtime          0\n",
-       "Genre            0\n",
-       "IMDB_Rating      0\n",
-       "Director         0\n",
-       "Star1            0\n",
-       "Star2            0\n",
-       "Star3            0\n",
-       "Star4            0\n",
-       "No_of_Votes      0\n",
-       "range            0\n",
-       "revenue          0\n",
-       "budget           0\n",
+       "Series_Title         0\n",
+       "Released_Year        0\n",
+       "Runtime              0\n",
+       "Genre                0\n",
+       "IMDB_Rating          0\n",
+       "Director             0\n",
+       "Star1                0\n",
+       "Star2                0\n",
+       "Star3                0\n",
+       "Star4                0\n",
+       "No_of_Votes          0\n",
+       "range                0\n",
+       "revenue              0\n",
+       "budget               0\n",
+       "justified_revenue    0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +206,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(999, 12)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "short.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(442, 15)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
