--- a/hot_encoding.ipynb
+++ b/hot_encoding.ipynb
@@ -1802,7 +1802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1818,7 +1818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -3467,7 +3467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3476,7 +3476,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def func(year):\n",
+    "    if year in range(1920,1930):\n",
+    "        return \"1920s\"\n",
+    "    elif year in range(1930,1940):\n",
+    "        return \"1930s\"\n",
+    "    elif year in range(1940,1950):\n",
+    "        return \"1940s\"\n",
+    "    elif year in range(1950,1960):\n",
+    "        return \"1950s\"\n",
+    "    elif year in range(1960,1970):\n",
+    "        return \"1960s\"\n",
+    "    elif year in range(1970,1980):\n",
+    "        return \"1970s\"\n",
+    "    elif year in range(1980,1990):\n",
+    "        return \"1980s\"\n",
+    "    elif year in range(1990,2000):\n",
+    "        return \"1990s\"\n",
+    "    elif year in range(2000,2010):\n",
+    "        return \"2000s\"\n",
+    "    elif year in range(2010,2020):\n",
+    "        return \"2010s\"\n",
+    "    elif year == 2020:\n",
+    "        return \"2020\"\n",
+    "\n",
+    "df_final[\"range\"] = df_final[\"Released_Year\"].apply(func)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -3502,6 +3535,7 @@
        "      <th></th>\n",
        "      <th>Released_Year</th>\n",
        "      <th>Genre</th>\n",
+       "      <th>range</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -3509,29 +3543,35 @@
        "      <th>0</th>\n",
        "      <td>1948</td>\n",
        "      <td>Action</td>\n",
+       "      <td>1940s</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1962</td>\n",
        "      <td>Action</td>\n",
+       "      <td>1960s</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1964</td>\n",
        "      <td>Action</td>\n",
+       "      <td>1960s</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1969</td>\n",
        "      <td>Action</td>\n",
+       "      <td>1960s</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1971</td>\n",
        "      <td>Action</td>\n",
+       "      <td>1970s</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
@@ -3539,50 +3579,55 @@
        "      <th>1127</th>\n",
        "      <td>1974</td>\n",
        "      <td>Western</td>\n",
+       "      <td>1970s</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1128</th>\n",
        "      <td>1990</td>\n",
        "      <td>Western</td>\n",
+       "      <td>1990s</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1129</th>\n",
        "      <td>1992</td>\n",
        "      <td>Western</td>\n",
+       "      <td>1990s</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1130</th>\n",
        "      <td>2010</td>\n",
        "      <td>Western</td>\n",
+       "      <td>2010s</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1131</th>\n",
        "      <td>2012</td>\n",
        "      <td>Western</td>\n",
+       "      <td>2010s</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1132 rows × 2 columns</p>\n",
+       "<p>1132 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Released_Year    Genre\n",
-       "0              1948   Action\n",
-       "1              1962   Action\n",
-       "2              1964   Action\n",
-       "3              1969   Action\n",
-       "4              1971   Action\n",
-       "...             ...      ...\n",
-       "1127           1974  Western\n",
-       "1128           1990  Western\n",
-       "1129           1992  Western\n",
-       "1130           2010  Western\n",
-       "1131           2012  Western\n",
+       "      Released_Year    Genre  range\n",
+       "0              1948   Action  1940s\n",
+       "1              1962   Action  1960s\n",
+       "2              1964   Action  1960s\n",
+       "3              1969   Action  1960s\n",
+       "4              1971   Action  1970s\n",
+       "...             ...      ...    ...\n",
+       "1127           1974  Western  1970s\n",
+       "1128           1990  Western  1990s\n",
+       "1129           1992  Western  1990s\n",
+       "1130           2010  Western  2010s\n",
+       "1131           2012  Western  2010s\n",
        "\n",
-       "[1132 rows x 2 columns]"
+       "[1132 rows x 3 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3593,7 +3638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
